# jaxzero

./: .gitignore  CLAUDE.md  CMakeLists.txt  MAZero.txt  README.md  answers.txt  config.py  eval.py  jax_ray_cuda_issue.py  output.txt  output1.txt  pyproject.toml  questions.txt  requirements.txt  requirements2.txt  setup.py  train.py  train_ippo.py  train_mappo.py  train_v2.py
actors/: __init__.py  data_actor.py  learner_actor.py  reanalyze_actor.py  replay_buffer_actor.py
baselines/: __init__.py  ippo.py  mappo.py  networks.py
benchmarks/: replay_buffer_benchmark.py
configs/: config.yaml
configs/baseline/: ippo.yaml  mappo.yaml
configs/mcts/: default.yaml  joint.yaml  smax.yaml
configs/model/: default.yaml  smax.yaml
configs/train/: default.yaml  smax_3m.yaml
csrc/replay_buffer/: bindings.cpp  pinned_alloc.h  replay_buffer.cpp  replay_buffer.h  sum_tree.h
docs/superpowers/plans/: 2026-04-18-osla-joint-mcts.md  2026-04-24-smax-training-diagnosis.md  2026-04-28-mazero-jax-rewrite.md  2026-05-03-ctree-mcts.md  2026-05-05-fix-loss-plateau.md  2026-05-05-ray-async.md  2026-05-06-reanalysis.md
docs/superpowers/specs/: 2026-04-28-mazero-jax-design.md  2026-05-03-ctree-mcts-design.md
envs/: __init__.py  mpe_env_wrapper.py  smax_env_wrapper.py
jaxzero/: CLAUDE.md  config.py  eval.py  game.py  main.py  reanalyze.py  replay_buffer.py  train.py  train_async.py
jaxzero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jaxzero/actors/: __init__.py  data_actor.py  learner_actor.py  reanalyze_actor.py  replay_buffer_actor.py
jaxzero/envs/: base.py  mpe_wrapper.py  smax_wrapper.py
jaxzero/mcts/: sampled_mcts.py
jaxzero/mcts/ctree/: ctree.pxd  cytree.pyx  setup.py
jaxzero/mcts/ctree/lib/: cnode.h
jaxzero/model/: layers.py  networks.py  transforms.py
mcts/: __init__.py  base.py  mcts_independent.py  mcts_joint.py  mcts_joint_osla.py
model/: __init__.py  attention.py  layers.py  model.py
outputs/2026-04-20/11-27-42/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-04-20/12-27-39/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-20/12-34-38/.hydra/: hydra.yaml
results/: events.out.tfevents.1776352957.DESKTOP-O6M17F4.657.0
results/model/: model_0.p
results/smac/3m/debug/seed=0/2026-04-15 15:03:51/: events.out.tfevents.1776283431.DESKTOP-O6M17F4.469.0
tests/: test_env.py  test_game.py  test_layers.py  test_learner.py  test_mcts.py  test_model.py  test_networks.py  test_reanalyze.py  test_replay_buffer.py  test_train.py  test_transforms.py
train/: ippo.py  mappo.py  muzero.py
training/: __init__.py  loop.py
unit_tests/: test_mcts.py  test_model.py
utils/: __init__.py  logging_utils.py  obs_norm.py  profiler.py  replay_buffer.py  smax_env_wrapper.py  transforms.py  utils.py
